spacing correction

--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -24,8 +24,8 @@ html, body {
 h1, h2, h3, h4, h5 {
 	font-weight: $fw-light;
   line-height: 1.2;
-  margin-top: 3rem;
-  margin-bottom: 0.6rem;
+  padding-top: 3rem;
+  padding-bottom: 0.6rem;
 }
 h1 { font-size: $fz-h1; }
 h2 { font-size: $fz-h2; }
