--- a/app/styles/components/section.scss
+++ b/app/styles/components/section.scss
@@ -270,7 +270,7 @@
     padding: 40px 80px 180px;
   }
   .section__text {
-    padding: 0 2rem 2rem;
+    padding: 0 2rem 0;
   }
   .background--header:after {
     display: block;
